# TypeR

./: .gitignore  Cargo.toml
assignment/: Cargo.toml
assignment/src/: lib.rs
base_language/: Cargo.toml
base_language/src/: identifier.rs  language.rs  language_struct.rs  lib.rs  symbol.rs  type.rs  type_name.rs  value.rs
base_parser/: Cargo.toml
base_parser/src/: lib.rs
character/: Cargo.toml
character/src/: lib.rs
checker/: Cargo.toml
checker/src/: context.rs  lib.rs  normal_disjunctive_form.rs
command/: Cargo.toml
command/src/: function.rs  lib.rs  scope.rs
complex/: Cargo.toml
complex/src/: lib.rs
double/: Cargo.toml
double/src/: lib.rs
expression/: Cargo.toml
expression/src/: lib.rs
expression/src/function/: mod.rs
expression/src/list/: mod.rs
expression/src/value/complex/: mod.rs
expression/src/vector/: mod.rs
function/: Cargo.toml
function/src/: lib.rs
integer/: Cargo.toml
integer/src/: lib.rs
list/: Cargo.toml
list/src/: lib.rs
logical/: Cargo.toml
logical/src/: lib.rs
scope/: Cargo.toml
scope/src/: lib.rs
transpiler/: Cargo.toml
transpiler/src/: lib.rs
union/: Cargo.toml
union/src/: lib.rs
value/: Cargo.toml
value/src/: lib.rs
vector/: Cargo.toml
vector/src/: lib.rs
