[package]
name = "assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base_parser = { path = "../base_parser" }
base_language = { path = "../base_language" }
nom = "7.1.3"
value = { path = "../value" }
expression = { path = "../expression" }
