[package]
name = "command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
union = { path = "../union" }
expression = { path = "../expression" }
nom = "7.1.3"
base_language = { path = "../base_language" }
base_parser = { path = "../base_parser" }
