[package]
name = "expression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
value = { path = "../value" }
vector = { path = "../vector" }
list = { path = "../list" }
base_language = { path = "../base_language" }
