[package]
name = "value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base_language = { path = "../base_language" }
integer = { path = "../integer" }
character = { path = "../character" }
double = { path = "../double" }
logical = { path = "../logical" }
complex = { path = "../complex" }
nom = "7.1.3"
